# point-transformer-object-condensation

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  requirements.txt  setup.sh
configs/data/: detector.yaml  shapes.yaml
configs/model/: ptv3_base.yaml
configs/train/: default.yaml  shapes.yaml
data/: generate_shapes.py
docs/: architecture.md  custom_task.md  data_format.md  grant_report.md
examples/calorimeter/: README.md  config.yaml  generate.py  task.py
scripts/: evaluate.py  export_onnx.py  export_predictions.py  generate_data.py  ship_tb_run.py  train.py
src/: __init__.py
src/augmentations/: README.md  __init__.py  base.py  basic.py
src/data/: __init__.py  dataset.py  shape_dataset.py
src/inference/: __init__.py  cluster.py
src/losses/: __init__.py  oc_loss.py
src/models/: __init__.py  backbone.py  heads.py
src/tasks/: README.md  __init__.py  base.py  shapes.py
src/training/: trainer.py
src/utils/: __init__.py  model_summary.py  tb_logging.py
tests/: test_shape_dataset.py  test_smoke.py
